--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,14 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
+# Env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
