--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,23 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# System files
 .DS_Store
+
+# Build artifacts
 dist
 dist-ssr
 coverage
 *.local
 
+# Cypress
 /cypress/videos/
 /cypress/screenshots/
 
-# Editor directories and files
+# Editor & IDE files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -27,9 +33,10 @@ coverage
 *.sln
 *.sw?
 
+# TypeScript cache
 *.tsbuildinfo
 
-# Env files
+# Environment variables
 .env.local
 .env.development.local
 .env.test.local
@@ -39,3 +46,6 @@ coverage
 .flaskenv*
 !.env.project
 !.env.vault
+
+# Temporary files created by some editors
+*~
