--- a/package.json
+++ b/package.json
@@ -1,39 +1,32 @@
 {
-  "_comment": "npm configuration file for the Random Video Game Generator project - a Vue.js app for generating random games",
-
   "name": "videogame-randomized",
   "version": "0.0.0",
   "private": true,
   "type": "module",
-
-  "_scripts_comment": "Available npm scripts for development and project build",
+  "description": "Random Video Game Generator - A Vue.js app for discovering random games",
   "scripts": {
-    "dev": "vite",                          "_comment_dev": "Starts development server with hot-reload",
-    "build": "vite build",                  "_comment_build": "Creates optimized production build",
-    "preview": "vite preview",              "_comment_preview": "Local preview of production build",
-    "lint": "eslint . --fix",               "_comment_lint": "Runs code linting and automatically fixes errors",
-    "format": "prettier --write src/"      "_comment_format": "Formats code according to Prettier rules"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix",
+    "format": "prettier --write src/"
   },
-
-  "_dependencies_comment": "Runtime dependencies needed for the application in production",
   "dependencies": {
-    "axios": "^1.8.3",                     "_comment_axios": "Library for making HTTP requests (communication with RAWG API)",
-    "vue": "^3.5.13"                       "_comment_vue": "Reactive JavaScript framework for building user interfaces"
+    "axios": "^1.8.3",
+    "vue": "^3.5.13"
   },
-
-  "_devDependencies_comment": "Development dependencies used only during build and development process",
   "devDependencies": {
-    "@eslint/js": "^9.21.0",               "_comment_eslint_js": "ESLint configuration for JavaScript",
-    "@vitejs/plugin-vue": "^5.2.1",       "_comment_vite_vue": "Vite plugin to support Vue.js .vue files",
-    "@vue/eslint-config-prettier": "^10.2.0", "_comment_vue_prettier": "ESLint configuration compatible with Prettier for Vue",
-    "autoprefixer": "^10.4.21",           "_comment_autoprefixer": "PostCSS plugin to automatically add vendor prefixes",
-    "eslint": "^9.21.0",                  "_comment_eslint": "Linting tool to identify problematic patterns in code",
-    "eslint-plugin-vue": "~10.0.0",       "_comment_eslint_vue": "ESLint plugin specific for Vue.js files",
-    "globals": "^16.0.0",                 "_comment_globals": "List of global variables for ESLint",
-    "postcss": "^8.5.6",                  "_comment_postcss": "Tool for transforming CSS with JavaScript plugins",
-    "prettier": "3.5.3",                  "_comment_prettier": "Code formatter to maintain consistent style",
-    "tailwindcss": "^3.4.17",             "_comment_tailwind": "Utility-first CSS framework for rapid prototyping",
-    "vite": "^6.2.1",                     "_comment_vite": "Fast build tool and development server for modern projects",
-    "vite-plugin-vue-devtools": "^7.7.2"  "_comment_vue_devtools": "Plugin to integrate Vue DevTools during development"
+    "@eslint/js": "^9.21.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.21.0",
+    "eslint-plugin-vue": "~10.0.0",
+    "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "prettier": "3.5.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.2.1",
+    "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
